<resources>
    <string name="app_name">RemueMeninges</string>
    <string name="cat3">"Cat 3 = La loi et les prophètes"</string>
    <string name="cat4">"Cat 4 = Histoire"</string>
    <string name="cat5">"Cat 5 = Le ciel"</string>
    <string name="cat6">"Cat 6 = Divers"</string>
    <string name="ce_n_est_pas_une_couleur">Ce n\'est pas une couleur c\'est autre chose sois dit entre nous </string>
    <string name="blanc">Blanc</string>
    <string name="quelle_est_la_couleur_du_cheval_blanc_d_henri_iv_a_blanc_b_rouge_c_vert_d_rose">Quelle est la couleur du cheval blanc d\'Henri IV ? a) blanc b) rouge c) vert d) rose</string>
    <string name="histo_question">"Question : "</string>
    <string name="histo_category">"Catégorie : "</string>
    <string name="histo_date_creation">"Date de création : "</string>
    <string name="crea_category">Catégorie</string>
    <string name="crea_question">Question</string>
    <string name="crea_indice">Indice</string>
    <string name="crea_response">Réponse</string>
    <string name="histo_rb_date">par date</string>
    <string name="histo_rb_level">par difficulté</string>
    <string name="histo_rb_category">par catégorie</string>
    <string name="card_category">CATEGORIE</string>
    <string name="card_question">QUESTION</string>
    <string name="card_indice">INDICE</string>
    <string name="card_answer">REPONSE</string>
    <string name="card_accueil">ACCUEIL</string>
    <string name="card_next_card">CARTE SUIVANTE</string>
    <string name="home_bt_play">A VOUS DE JOUER</string>
    <string name="home_bt_list">LISTE DES CARTES</string>
    <string name="crea_enregistrer_card">ENREGISTRER LA CARTE</string>
    <string name="crea_btn_answer_recorder">enregistrement audio de la réponse</string>
    <string name="crea_btn_clue_recorder">enreigistrement de l\'audio de l\'indice</string>
    <string name="crea_btn_question_recorder">enregistrement audio de la question</string>
    <string name="card_img_play">Jouer !</string>
    <string name="card_btn_read_question">écouter la question</string>
    <string name="card_btn_read_clue">écouter l\'indice</string>
    <string name="card_btn_read_answer">écouter la réponse</string>
    <string name="histo_title">Liste des cartes</string>
    <string name="histo_txt_recherche_par_mot_cl">Recherche par mot clé</string>
    <string name="histo_sous_titre">Mode de recherche</string>
    <string name="histo_liste_des_cartes_de_jeu">Liste des cartes</string>
    <string name="histo_retour_accueil">Accueil</string>
    <string name="categorie">CATEGORIE</string>
    <string name="remue_meninges">REMUE-MENINGES</string>
    <string name="img_party">Joueurs en pleine action</string>
    <string name="crea_level">Niveau de difficulté</string>
    <string name="card_level">NIVEAU DE DIFFICULTE</string>
    <string name="home_bt_create">CREATION DE CARTES</string>
    <string name="create_btn_accueil">ACCUEIL</string>
    <string name="list_histo_level">"niveau de difficulté : "</string>
    <string name="list_histo_bt_delete">suppression de la carte</string>
    <string name="modifier_la_carte">modifier la carte</string>
    <string name="cat1">"Cat 1 = Géographie et nature "</string>
    <string name="cat2">"Cat 2 = Bible"</string>
    <string name="cat_4_a_6">"Cat 4 = La loi et les prophètes       Cat 5 = Histoire       Cat 6 = Divers"</string>
    <string name="cat_1_a_3">"Cat 1 = Géographie et nature Cat 2 = Bible Cat 3 = le ciel"</string>
    <string name="categorie1">Géographie et nature</string>
    <string name="categorie2">Bible</string>
    <string name="categorie3">Loi et prophètes</string>
    <string name="categorie4">Histoire</string>
    <string name="categorie5">Ciel</string>
    <string name="categorie6">Divers</string>
</resources>
