<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Vue.MainActivity">

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:text="@string/remue_meninges"
        android:textColor="#A30339"
        android:textSize="@dimen/title_txt"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/img_party"
        app:srcCompat="@drawable/theme" />

    <Button
        android:id="@+id/home_btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:text="@string/home_bt_play"
        android:textSize="@dimen/title_txt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/home_btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:text="@string/home_bt_create"
        android:textSize="@dimen/title_txt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/home_btn_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:text="@string/home_bt_list"
        android:textSize="@dimen/title_txt"
        android:textStyle="bold" />

</LinearLayout>